# image_search

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
readme/: README.md  qdrant.md  qdrantv2.md
src/: celery_app.py  extract_option.py  fuzzy_search.py  main.py  option_distibution.py  performenceModel.py  producer.py  tempCodeRunnerFile.py
src/db/: mongo.py
src/embedding/: api.py  index.html  openclip_encoder.py
src/performence/: performence_drant.py  performence_qdrant.py
src/vectorstore/: performenceQdrant.py  qdrant.py
src/web/: web.py
